# snowpack-migration

./: CMakeLists.txt  Readme.txt  Welcome.txt  snowpack.lsm
applications/snowpack/: CMakeLists.txt  Main.cc  getopt.c  getopt.h
doc/examples/: readme.txt  run_antarctic.sh  run_oper1exp.sh  run_oper5exp.sh  run_operMST96.sh  run_res1exp.sh  run_res5exp.sh  run_resDAV2.sh
doc/examples/cfgfiles/: io_antarctic.ini  io_oper.ini  io_operMST96.ini  io_res1exp.ini  io_res5exp.ini  io_resDAV2.ini  io_seaice_S12.ini  io_soil.ini
doc/examples/init/: DAV2.sno  DAV21.sno  DAV22.sno  DAV23.sno  DAV24.sno  DAV5.sno  WFJ2.sno  WFJ21.sno  WFJ22.sno  WFJ23.sno  WFJ24.sno
doc/examples/input/: MST96.haz  MST96.inp  MST96.smet  MST96.sno  MST96.snosmet  MST961.sno  MST963.sno  MST964.sno  domeC.haz  domeC.inp  domeC.smet  domeC.sno  gems.sno
doc/examples/research_example/: io.ini  meteo_reading
doc/examples/research_example/input/: DAV2.inp  DAV2.smet  DAV2.sno  IMIS_Extracted_Info.txt  MST96_RR.sno
doc/images/: clear_sky.agr.bz2  clear_sky.eps  energy_balance.eps  energy_balance.fig  inishell.eps  niviz.eps  physical_processes.eps  physical_processes.fig
snowpack/: Aggregate.cc  Aggregate.h  AsciiIO.cc  AsciiIO.h  CMakeLists.txt  CaaMLIO.cc  Canopy.cc  Canopy.h  Constants.h  DataClasses.cc  DataClasses.h  Hazard.cc  Hazard.h  ImisDBIO.cc  ImisDBIO.h  Laws.cc  Laws.h  Laws_sn.cc  Laws_sn.h  MainPage.h  Metamorphism.cc  Metamorphism.h  Meteo.cc  Meteo.h  PhaseChange.cc  PhaseChange.h  Radiation.cc  Radiation.h  ReSolver1d.cc  ReSolver1d.h  Saltation.cc  Saltation.h  SmetIO.cc  SmetIO.h  SnowDrift.cc  SnowDrift.h  Snowpack.cc  Snowpack.h  SnowpackConfig.cc  SnowpackConfig.h  (+19 more)
snowpack/icons/: ico_convert.sh
snowpack/plugins/: AsciiIO.cc  AsciiIO.h  CMakeLists.txt  CaaMLIO.cc  CaaMLIO.h  ImisDBIO.cc  ImisDBIO.h  SmetIO.cc  SmetIO.h  SnowpackIO.cc  SnowpackIO.cmake.cc  SnowpackIO.h
snowpack/plugins/pugixml/: pugixml.cpp
snowpack/snowpackCore/: Aggregate.cc  Aggregate.h  CMakeLists.txt  Canopy.cc  Canopy.h  Metamorphism.cc  Metamorphism.h  PhaseChange.cc  PhaseChange.h  ReSolver1d.cc  ReSolver1d.h  SalinityTransport.cc  SeaIce.cc  Snowpack.cc  Snowpack.h  Solver.cc  Solver.h  VapourTransport.cc  VapourTransport.h  WaterTransport.cc  WaterTransport.h
tests/: CMakeLists.txt  startScript.sh  startScriptValgrind.cmake
tests/albedo/: CMakeLists.txt
tests/basics/: CMakeLists.txt  run_basics.sh
tests/implicitsolver/: CMakeLists.txt  HeatEquationAnalytical.cc  HeatEquationAnalytical.h  implicitSolverTest.cc  implicitsolver.sh
tests/mass_and_energy_balance/: test_energy_balance.sh  test_mass_balance.sh
tests/massbalance/: CMakeLists.txt  massbalancecheck.sh  run_test.sh
tests/res1exp/: CMakeLists.txt  io_doorschot.ini  io_res1exp.ini  run_res1exp.sh
tests/res1exp/input/: io_res1exp.ini
tests/res1exp/output_ref/: MST96_res.haz  MST96_res.ini  MST96_res.met.bz2  MST96_res.pro.bz2  MST96_res.sno
tests/res5exp/: io_res5exp.ini  run_res5exp.sh
tests/res5exp/output_ref/: MST961_res4.haz  MST961_res4.met.bz2  MST961_res4.pro.bz2  MST961_tst.met.bz2  MST961_tst.pro.bz2  MST961_tst.sno  MST963_res4.haz  MST963_res4.met.bz2  MST963_res4.pro.bz2  MST963_tst.met.bz2  MST963_tst.pro.bz2  MST963_tst.sno
tools/: SnExtract.sh  energybalancecheck.sh  energybalancesoilcheck.sh  manifest.xml  massbalancecheck.sh  metExtract.sh  modernize_snoold.sh  sn_run.sh  timeshift_sno_files.sh
tools/cmake/: BuildVersion.cmake  FindLapack.cmake  FindLibsnowpack.cmake  FindMeteoIO.cmake  FindOCCI.cmake  GetDate.cmake  SetCompilerOptions.cmake
